Fix: fixed width overflow cause by slide in animation

--- a/src/index.css
+++ b/src/index.css
@@ -117,6 +117,10 @@ li {
   list-style-position: inside;
 }
 
+#hero, #contact {
+  overflow-x: hidden;
+}
+
 a {
   text-decoration: none;
   color: var(--primary-color);
